# hproc

./: .gitignore  .hproc.cabal.swp  README.md  hproc.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: .Main.hs.swp  Main.hs
src/Data/Amp/: Hylo.hs
src/Hproc/: .HJproc.hs.swp  Hproc.hs
